[gd_scene load_steps=9 format=3 uid="uid://can0mkuh4q6h1"]

[ext_resource type="Script" path="res://scripts/core_menu.gd" id="1_wkma7"]
[ext_resource type="Texture2D" uid="uid://dgs6x6cofj1vs" path="res://assets/cursor_pack/Outline/line_horizontal.svg" id="2_fiab7"]
[ext_resource type="Texture2D" uid="uid://irg4lbbve7j3" path="res://assets/cursor_pack/Outline/target_round_a.svg" id="3_mtgk1"]
[ext_resource type="Texture2D" uid="uid://dinyrowpomlsr" path="res://assets/cursor_pack/Outline/door_enter.svg" id="4_1ibln"]
[ext_resource type="Texture2D" uid="uid://d00vbarw4isiw" path="res://assets/cursor_pack/Outline/navigation_nw.svg" id="5_et0qk"]
[ext_resource type="Texture2D" uid="uid://cdh2fcwc2jfvi" path="res://assets/parts_scraps/spaceParts_092.png" id="6_oouka"]
[ext_resource type="Texture2D" uid="uid://d3u85j1yoetb2" path="res://assets/white_energy_s.png" id="7_sfra7"]

[sub_resource type="LabelSettings" id="LabelSettings_8os35"]
font_size = 48
font_color = Color(0.786631, 0.767905, 0.875289, 1)
outline_size = 8
outline_color = Color(0.698277, 0.700124, 0.891545, 1)
shadow_size = 4
shadow_color = Color(0.811765, 0.486275, 0.47451, 0)

[node name="CoreMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkma7")

[node name="Wire" type="Button" parent="."]
layout_mode = 0
offset_left = -333.0
offset_top = -253.0
offset_right = -248.0
offset_bottom = -213.0
scale = Vector2(2.4, 2.4)
text = "wire"
icon = ExtResource("2_fiab7")
metadata/scrap_cost = 6
metadata/energy_cost = 0
metadata/item_name = "wire"

[node name="Turret" type="Button" parent="."]
layout_mode = 0
offset_left = -231.0
offset_top = -367.0
offset_right = -131.0
offset_bottom = -327.0
scale = Vector2(2.4, 2.4)
text = "turret"
icon = ExtResource("3_mtgk1")
metadata/scrap_cost = 25
metadata/energy_cost = 28
metadata/item_name = "turret"

[node name="Checkpoint" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = -364.0
offset_right = 118.0
offset_bottom = -324.0
scale = Vector2(2.4, 2.4)
text = "router"
icon = ExtResource("4_1ibln")
metadata/scrap_cost = 18
metadata/energy_cost = 42
metadata/item_name = "router"

[node name="PickupCraft" type="Button" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = -254.0
offset_right = 262.0
offset_bottom = -214.0
scale = Vector2(2.4, 2.4)
text = "pickup raft"
icon = ExtResource("5_et0qk")
metadata/scrap_cost = 45
metadata/energy_cost = 40
metadata/item_name = "pickup_raft"

[node name="ScrapText" type="Button" parent="."]
layout_mode = 0
offset_left = -300.0
offset_top = 168.0
offset_right = -13.0
offset_bottom = 252.0
theme_override_colors/icon_disabled_color = Color(0.973535, 0.973535, 0.973535, 1)
theme_override_font_sizes/font_size = 45
button_mask = 4
text = "scraps"
icon = ExtResource("6_oouka")
flat = true

[node name="CostLabel" type="Label" parent="ScrapText"]
layout_mode = 0
offset_left = 220.0
offset_top = 58.0
offset_right = 260.0
offset_bottom = 121.0
rotation = -0.139626
theme_override_colors/font_color = Color(0.850391, 0.36398, 0.193161, 1)
theme_override_font_sizes/font_size = 45
text = "-5"
label_settings = SubResource("LabelSettings_8os35")

[node name="EnergyText" type="Button" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 161.0
offset_right = 356.0
offset_bottom = 258.0
scale = Vector2(0.95, 0.95)
theme_override_colors/icon_disabled_color = Color(0.973535, 0.973535, 0.973535, 1)
theme_override_font_sizes/font_size = 45
button_mask = 4
text = "energy"
icon = ExtResource("7_sfra7")
flat = true

[node name="CostLabel" type="Label" parent="EnergyText"]
layout_mode = 0
offset_left = 220.0
offset_top = 58.0
offset_right = 260.0
offset_bottom = 121.0
rotation = -0.139626
theme_override_colors/font_color = Color(0.850391, 0.36398, 0.193161, 1)
theme_override_font_sizes/font_size = 45
text = "-5"
label_settings = SubResource("LabelSettings_8os35")
